--- a/SNM/index.html
+++ b/SNM/index.html
@@ -6,50 +6,49 @@
     <title>SNM</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <script type="module">
+      import {printNavBar, printMyPlaylists, printFollowedPlaylists, printTopCharts, search, printCardPlaceholder} from "./lib.js";
+      printNavBar("left_menu")
+      for(let i=0;i<5;i++){
+        printCardPlaceholder("top")
+      }
+      printMyPlaylists("myPlaylists", "playlist-template")
+      printFollowedPlaylists()
+      printTopCharts()
+      document.getElementById("searchbutton").addEventListener("click", search)
+    </script> 
 </head>
 <body>
     <div class="container external-container">
       <div class="row">
         <div class="col-12 col-lg-3 col-sm-12 col-xs-12 text-center" id="left_menu">
-          <script type="module">
-            import {printNavBar, printMyPlaylists, printFollowedPlaylists, printTopCharts, search, printCardPlaceholder} from "./lib.js";
-            printNavBar("left_menu")
-            for(let i=0;i<5;i++){
-              printCardPlaceholder("top")
-            }
-            printMyPlaylists("myPlaylists", "playlist-template")
-            printFollowedPlaylists()
-            printTopCharts()
-            document.getElementById("searchbutton").addEventListener("click", search)
-          </script> 
         </div>
-
-        <div class="col" id="home">
+        <div class="col justify-content-center" id="home">
           <div class="container">
             <div class="row justify-content-center">
-              <div class="col-6 text-center" id="searchMenu" >
+              <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 text-center" id="searchMenu" >
                 <h5>Ricerca contenuti</h5>
                 <div id="search">
-                  <input type="text" class="form-control" id="input"> 
-                  <div class="row justify-content-center" id="searchParameters"> 
-                    <div class="form-check form-switch col-10 col-md-5">
-                      <input class="form-check-input" type="checkbox" role="switch" id="track" checked>
-                      <label class="form-check-label" for="track">Canzone</label>
+                    <input type="text" class="form-control" id="input"> 
+                    <div class="row justify-content-center" id="searchParameters"> 
+                      <div class="form-check form-switch col-10 col-md-5">
+                        <input class="form-check-input" type="checkbox" role="switch" id="track" checked>
+                        <label class="form-check-label" for="track">Canzone</label>
+                      </div>
+                      <div class="form-check form-switch col-10 col-md-5">
+                        <input class="form-check-input" type="checkbox" role="switch" id="artist">
+                        <label class="form-check-label" for="artist">Artista</label>
+                      </div>
+                      <div class="form-check form-switch col-10 col-md-5">
+                        <input class="form-check-input" type="checkbox" role="switch" id="album">
+                        <label class="form-check-label" for="album">Album</label>
+                      </div>
+                      <div class="form-check form-switch col-10 col-md-5">
+                        <input class="form-check-input" type="checkbox" role="switch" id="playlist">
+                        <label class="form-check-label" for="playlist">Playlist</label>
+                      </div>
                     </div>
-                    <div class="form-check form-switch col-10 col-md-5">
-                      <input class="form-check-input" type="checkbox" role="switch" id="artist">
-                      <label class="form-check-label" for="artist">Artista</label>
-                    </div>
-                    <div class="form-check form-switch col-10 col-md-5">
-                      <input class="form-check-input" type="checkbox" role="switch" id="album">
-                      <label class="form-check-label" for="album">Album</label>
-                    </div>
-                    <div class="form-check form-switch col-10 col-md-5">
-                      <input class="form-check-input" type="checkbox" role="switch" id="playlist">
-                      <label class="form-check-label" for="playlist">Playlist</label>
-                    </div>
-                  </div>
-                  <button class="btn btn-light" value="Ricerca" id="searchbutton">Ricerca</button>
+                    <button class="btn btn-primary show" value="Ricerca" id="searchbutton">Ricerca</button>
                 </div>
               </div>
             </div>
