--- a/SNM/asset/src/account.html
+++ b/SNM/asset/src/account.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <script type="module">
-        import {logged, loadAccount, cambiaCredenziali, printNavBar} from  "../lib.js";
+        import {logged, loadAccount, cambiaCredenziali, printNavBar, deleteAccount} from  "../lib.js";
         if(!logged()){window.location.href = "/"}
         printNavBar("left_menu")
         loadAccount()
         document.getElementById("buttonModify").addEventListener("click", cambiaCredenziali)
+        document.getElementById("buttonDelete").addEventListener("click", deleteAccount)
     </script>
 </head>
 <body>
@@ -42,7 +43,7 @@
                             <label class="form-check-label" for="exampleCheck1">Spunta per cambiare la password</label>
                         </div>
                         <button type="submit" class="btn btn-primary" id="buttonModify" style="width: 100%;margin-top: 20px;">Modifica i tuoi dati</button>
-                        <button type="submit" class="btn btn-danger" onclick="" style="width: 100%;margin-top: 20px;">Cancella il tuo account</button>
+                        <button type="submit" class="btn btn-danger" id="buttonDelete" style="width: 100%;margin-top: 20px;">Cancella il tuo account</button>
                     </div>
                 </div>
             </div>
