--- a/SNM/asset/src/login.html
+++ b/SNM/asset/src/login.html
@@ -5,22 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SNM</title>
     <link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <script type="module">
       import { addUser, login } from "../lib.js";
       document.getElementById("buttonAddUser").addEventListener("click", addUser)
       document.getElementById("buttonLogin").addEventListener("click", login)
     </script>
+    <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
+      <symbol id="check-circle-fill" viewBox="0 0 16 16">
+        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+      </symbol>
+      <symbol id="info-fill" viewBox="0 0 16 16">
+        <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+      </symbol>
+      <symbol id="exclamation-triangle-fill" viewBox="0 0 16 16">
+        <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+      </symbol>
+  </svg>
 </head>
 <body>
     <div class="container external-container" >
       <div class="row" id="userForm">
-        <div class="col-5" id="signin">
-          <h4>Crea un nuovo account</h4>
+        <div class="col-12 col-sm-12 col-md-5" id="signin">
+          <h4>Registrati</h4>
           <div class="mb-3">
             <label for="user" class="form-label">User nickname</label>
-            <input type="text" class="form-control" id="user">
+            <input type="text" class="form-control" id="user" autocomplete="off">
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">Email address</label>
@@ -28,13 +40,15 @@
           </div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password">
+            <input type="password" class="form-control" id="password" autocomplete="off">
           </div>
-          <button class="btn btn-primary" id="buttonAddUser">Submit</button>
+          <div class="text-center">
+            <button class="btn btn-primary show" id="buttonAddUser">Registrati</button>
+          </div>
         </div>
         <div class="col"></div>
         
-        <div class="col-5 " id="login">
+        <div class="col-12 col-sm-12 col-md-5" id="login">
           <h4>Accedi</h4>
           <div class="mb-3">
             <label for="login_email" class="form-label">Email address</label>
@@ -44,9 +58,20 @@
             <label for="login_password" class="form-label">Password</label>
             <input type="password" class="form-control" id="login_password">
           </div>
-          <button class="btn btn-primary" id="buttonLogin">Submit</button>
+          <div class="text-center">
+            <button class="btn btn-primary show" id="buttonLogin">Accedi</button>
+          </div>
         </div>
+        
         <a href="/" class="text-center"><h3>Torna alla home</h3></a>
+
+        <div id="alerts">
+          <div class="alert alert-danger d-flex align-items-center visually-hidden" style="height: 70px;margin-top:20px;" role="alert" id="errorAlert">
+              <svg class="bi flex-shrink-0 me-2" role="img" style="width: 30px;"><use xlink:href="#exclamation-triangle-fill"/></svg>
+              <div id="errorText">
+              </div>
+          </div>
+        </div>
       </div>
     </div>    
 </body>
