--- a/SNM/asset/src/account.html
+++ b/SNM/asset/src/account.html
@@ -8,10 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <script type="module">
-        import {logged, loadAccount, cambiaCredenziali, printNavBar, deleteAccount} from  "../lib.js";
+        import {logged, loadAccount, cambiaCredenziali, printNavBar, deleteAccount, loadGenres} from  "../lib.js";
         if(!logged()){window.location.href = "/"}
         printNavBar("left_menu")
         loadAccount()
+        loadGenres()
         document.getElementById("buttonModify").addEventListener("click", cambiaCredenziali)
         document.getElementById("buttonDelete").addEventListener("click", deleteAccount)
     </script>
@@ -49,9 +50,32 @@
                             <li for="user" class="form-label">Nuova password</li>
                             <input type="password" class="form-control" id="password" autocomplete="off">
                         </div>
-                        <div class="mb-3 form-check">
+                        <div class="mb-3 form-check" style="margin-left:40px">
                             <input type="checkbox" class="form-check-input" id="changePassword">
                             <label class="form-check-label" for="exampleCheck1">Spunta per cambiare la password</label>
+                        </div>
+                        <div class="mb-3 form-check">
+                            <li>
+                                Generi preferiti
+                            </li>
+                            <div class="container">
+                                <div class="row" id="tagList">
+                                </div>
+                            </div>
+                            <div class="mb-3 form-check">
+                                <div>Generi disponibili</div>
+                                <div class="row" style="margin-top: 10px;">
+                                    <div class="col-6">
+                                        <select id="genres" class="form-select ">
+                                        </select>
+                                    </div>
+                                    <div class="col-6">
+                                        <button class="btn btn-primary" style="width: 100%;">
+                                            Aggiungi genere tra i preferiti
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <button type="submit" class="btn btn-primary" id="buttonModify" style="width: 100%;margin-top: 20px;">Modifica i tuoi dati</button>
                         <button type="submit" class="btn btn-danger" id="buttonDelete" style="width: 100%;margin-top: 20px;">Cancella il tuo account</button>
