--- a/SNM/asset/src/infoplaylist.html
+++ b/SNM/asset/src/infoplaylist.html
@@ -24,11 +24,25 @@
             </div>
     
             <div class="col" id="home">
-                <div class="" id="infoPlaylist">
+                <div>
+                    <div class="" id="infoPlaylist">
+                    </div>
+                    <div id="trackPlaylist">
+                        <div class="row justify-content-center" id="top">
+                        <div id="trackPlaylist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
+                        </div>
+                    </div>
                 </div>
-                <div id="trackPlaylist">
-                    <div class="row justify-content-center" id="top">
-                    <div id="trackPlaylist-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
+
+                <div id="recommendations">
+                    <div id="track-template" class="visually-hidden card col-lg-3 col-xl-2 col-md-3 col-sm-6">
+                        <img class="card-img"/>
+                        <div class="card-body">
+                          <h5 class="card-title ">
+                            <span class="nome_traccia col-6"></span>
+                          </h5>
+                          <div class="nome_artista"></div><br>
+                        </div>
                     </div>
                 </div>
             </div>
